# Blaze

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  WC Engine.sln
Engine/: Globals.h  main.cpp
Engine/Editor/: Editor.cpp  Editor.h  EditorScene.cpp  EditorScene.h
Engine/Rendering/: CommandEncoder.h  Font.cpp  Font.h  Texture.cpp  Texture.h
Engine/Rendering/vk/: Pipeline.h
Engine/Scene/: Components.h  Scene.cpp  Scene.h  box2d.h
Engine/Scripting/: Script.cpp  Script.h  ScriptBase.h
Engine/Sound/: SoundEngine.h
Engine/UI/: Widgets.cpp  Widgets.h
Engine/Utils/: Image.h  Window.h
Engine/imgui_backend/: imgui_impl_vulkan.cpp
Engine/workdir/: BuiltinDefinitions.luau
Engine/workdir/assets/: imgui.ini
Engine/workdir/assets/shaders/: Line.frag  Line.vert  Renderer2D.vert
WC Engine/: Application.h  Editor.h  Globals.h  WC Engine.vcxproj  main.cpp
WC Engine/Editor/: Commands.h  Editor.h  EditorScene.h
WC Engine/Project/: Project.h  Settings.h
WC Engine/Rendering/: AssetManager.h  Font.cpp  Font.h  RenderData.h  Renderer2D.h  Rendergraph.h
WC Engine/Scene/: Components.h  EditorScene.h  Game.h  Scene.h  box2d.h
WC Engine/Scripting/: Script.h  ScriptBase.h
WC Engine/Sound/: SoundEngine.h
WC Engine/UI/: Widgets.h
WC Engine/assets/: imgui.ini
WC Engine/assets/shaders/: Line.vert  Renderer2D.frag  chromaticAberration.comp  crt.comp
WC Engine/shaders/: Line.vert  Renderer2D.frag  Renderer2D.vert
WC Engine/src/: Application.h  EntryPoint.h  Globals.h
WC Engine/src/Rendering/: Font.cpp  Rendergraph.h
WC Engine/src/Scene/: Components.h  Game.h  Scene.h
WC Engine/src/UI/: Widgets.h
WC Engine/src/game/: Game.h
WC Engine/workdir/: BuiltinDefinitions.luau  SavedProjects.yaml  testScene.scene
WC Engine/workdir/assets/: imgui.ini
WC Engine/workdir/assets/shaders/: Line.vert  Renderer2D.frag  Renderer2D.vert  background.comp  bloom.comp  composite.comp  imgui.vert
